@@ -1,5 +1,5 @@
 DIST nanorc-20080108.tar.bz2 10845 RMD160 4cff6a9ca013949e93072667a62ad9e743af1030 SHA1 854fde7cd93fdc31b7088e9712f20c169ea5812c SHA256 3fea5038d596751943ff78a9e5b9d4e8673bd686e6c6792455634f5fbf6da633
 EBUILD nanorc-20080108.ebuild 640 RMD160 394fb4b8e85eb56e85d56995c5ad3cefe1985c95 SHA1 32f2ef09cc553d9b533f60d5ba1ace1cab676fb0 SHA256 408123688ba70d96517af017b73f602b5b615be2b50a190935f5ad86667c24c5
-EBUILD nanorc-99999999.ebuild 706 RMD160 4c39549aca5ac148989ce24a489a21ef9df87143 SHA1 7368473b0bc69fad1c8d52fa6295a1c4a7191d28 SHA256 71f5a4874e4a9691c44552213e2458690b198904ae0d9c1d36cda83521c149b3
-MISC ChangeLog 254 RMD160 7bbaa9f238db2b4875d51be8b9030e14e2a2dce5 SHA1 6999da12d7b28be3e89b7f8bed5d0be9604be732 SHA256 467391266e5b6b61ecb671449613fd7afada1ad77d5dff8ad496ff83c9a6e810
+EBUILD nanorc-99999999.ebuild 1007 RMD160 1c3c7223f52b6d95d1a045c8c50370e3106d8884 SHA1 cc5927bd6369054d6089f6eccaf9e2966e830893 SHA256 05ee63b8e2f3c587ee80e0d6e2718d9c87d6ecca85b340ea02973318d2a24314
+MISC ChangeLog 393 RMD160 b6955a188a698d1be615d4b7879222b9c73322c6 SHA1 998f42ec0b8bd2f806ce8927ad62601a881c379e SHA256 08681fc87fda14379f22076fdf12e0c85ad3c3900bc49d95fb144c1381491a62
 MISC metadata.xml 1004 RMD160 746f62b69544698c9046b49b401b921005d4a009 SHA1 df8ea2a7641b0183024365684b1fa908a08de26c SHA256 afcde7f0864d2b0ee7f796a474ac483bf270f40443bf7598215d7788f4291448
