@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Jan 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  nanorc-99999999.ebuild:
+  app-editors/nanorc-9999 includes include lines nnnow
+
   12 Jan 2009; justin Lecher (jlec) <jlec@j-schmitz.net>
   +nanorc-99999999.ebuild:
   git repo ebuild as nanorc-99999999.ebuild added
